--- a/style.css
+++ b/style.css
@@ -10,3 +10,128 @@
     --name-fz:18px;
     --dark-grey:hsl(0, 0%, 59%);
 }
+*,
+*::after,
+*::before{
+    box-sizing: border-box;
+}
+/*======================*/
+body{
+    min-height: 720px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-cyan);
+    font-family: 'main';
+    overflow-x: hidden;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    width: 352px;
+    height: 376px;
+    background-color: white;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.blue{
+    min-height: 143px;
+    background: url(./images/bg-pattern-card.svg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-container{
+    width: 103px;
+    height: 103px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(4.4rem);
+}
+.img-container img{
+    border-radius: 50%;
+    width: 95px;
+    height: 95px;
+}
+.infos{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: end;
+    padding-bottom: 2rem;
+    align-items: center;
+    border-bottom: 1px solid var(--dark-grey);
+}
+.user{
+    display: flex;
+    gap: 10px;
+    font-size: var(--name-fz);
+    font-weight: 700;
+    color: var(--very-dark-blue);
+}
+.age{
+    color: var(--dark-grey);
+    font-weight: 400;
+}
+.adress{
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--dark-grey);
+}
+.stats{
+    height:90px ;
+    display: flex;
+    /* gap: 2rem; */
+    align-items: center;
+    justify-content: space-evenly;
+}
+.stat{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+}
+.bold{
+    font-weight: 700;
+    color: var(--very-dark-blue);
+    font-size: var(--name-fz);
+}
+.light{
+    font-weight: 400;
+    color: var(--grayish-blue);
+    font-size: 10px;
+    letter-spacing: 1px;
+}
+.top-pattern,
+.bottom-pattern{
+    position: absolute;
+    z-index: -1;
+    max-height: 720px;
+    /* max-width: 50%; */
+
+}
+.top-pattern img,
+.bottom-pattern img{
+    width: 100%;
+    height: 100%;
+
+}
+.top-pattern{
+    left: -24%;
+    top: -56%;
+}
+.bottom-pattern{
+    right: -22%;
+    bottom: -25%;  
+    overflow-y: hidden; 
+}
+@media screen and (max-width:340px) {
+    .card{
+        width: 310px;
+    }
+}
